re-enable lockscreen elements

--- a/modules/desktop/hypr/hyprlock.conf
+++ b/modules/desktop/hypr/hyprlock.conf
@@ -1,23 +1,22 @@
 background {
     monitor = 
-    # path = screenshot
     path = screenshot
 
-    # blur_passes = 3
-    # blur_size = 3
-    # noise = 0.0417
-    # contrast = 0.7916
-    # brightness = 0.8172
-    # vibrancy = 0.1696
-    # vibrancy_darkness = 0.0
+    blur_passes = 3
+    blur_size = 3
+    noise = 0.0417
+    contrast = 0.7916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
 }
 
 general {
-    # no_fade_in = false
-    # no_fade_out = false
-    # grace = 0
-    # disable_loading_bar = true
-    # hide_cursor = true
+    no_fade_in = false
+    no_fade_out = false
+    grace = 0
+    disable_loading_bar = true
+    hide_cursor = true
 }
 
 # INPUT FIELD
@@ -41,17 +40,17 @@ input-field {
 }
 
 # TIME
-# label {
-#     monitor =
-#     text = cmd[update:1000] echo "$(date +"%-H:%M%p")"
-#     color = $foreground
-#     #color = rgba(255, 255, 255, 0.6)
-#     font_size = 120
-#     font_family = GeistMono Nerd Font
-#     position = 0, -300
-#     halign = center
-#     valign = top
-# }
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%-H:%M%p")"
+    color = $foreground
+    #color = rgba(255, 255, 255, 0.6)
+    font_size = 120
+    font_family = GeistMono Nerd Font
+    position = 0, -300
+    halign = center
+    valign = top
+}
 
 # USER
 # label {
