replace catppuccin with stylix

--- a/modules/desktop/hypr/hyprland.conf
+++ b/modules/desktop/hypr/hyprland.conf
@@ -47,9 +47,7 @@ $menu = rofi
 
 # Some default env vars.
 # env = SSH_AUTH_SOCK, "$XDG_RUNTIME_DIR/keyring/ssh"
-env = XCURSOR_THEME, Catppuccin-Frappe-Maroon-Cursors
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME, Catppuccin-Frappe-Maroon-Cursors
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = QT_QPA_PLATFORM, wayland;xcb
@@ -187,16 +185,13 @@ windowrulev2 = float,class:^(Rofi)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$focusRofi = & while [ "$(hyprctl clients | grep "class: Rofi")x" == "x" ]; do continue; done; hyprctl dispatch focuswindow "^(Rofi)"
-
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, R, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu | cliphist decode | wl-copy 
-bind = $mainMod, space, exec, $menu -show drun $focusRofi
+bind = $mainMod, space, exec, $menu -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
