update shadow settings form

--- a/modules/desktop/hypr/hyprland.conf
+++ b/modules/desktop/hypr/hyprland.conf
@@ -82,9 +82,10 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 6
     gaps_out = 12
-    border_size = 0
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    border_size = 2
+
+    col.active_border = rgba(f4dbd6ff) # rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(cad3f5ff)
 
     layout = dwindle
 
@@ -96,14 +97,15 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 6
-    
     active_opacity = 0.95
     inactive_opacity = 0.85
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-    # Fancy Mode
-    # drop_shadow = yes
+    # # Fancy Mode
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
     blur {
         enabled = true
         size = 3
@@ -113,7 +115,9 @@ decoration {
     }
 
     # Batterymode
-    drop_shadow = false
+    # drop_shadow = {
+    #     enabled = false
+    # }
     # blur {
     #     enabled = false
     # }
